--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -28,4 +35,12 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    // Backport Java 8 Features to Android
+    compile 'com.github.streamsupport.streamsupport:streamsupport:-SNAPSHOT'
+    compile 'com.github.streamsupport.streamsupport:streamsupport-cfuture:-SNAPSHOT'
+    compile 'com.github.streamsupport.streamsupport:streamsupport-atomic:-SNAPSHOT'
+    compile 'com.github.streamsupport.streamsupport:streamsupport-flow:-SNAPSHOT'
+    compile 'com.github.streamsupport.streamsupport:streamsupport-literal:-SNAPSHOT'
 }
