--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+local.properties
+.idea/workspace.xml
+.idea/libraries
 .DS_Store
-/build
-/captures
+/android/build
+/android/captures
 .externalNativeBuild
 .idea
+
