--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "cn.jackq.messager"
+        applicationId "cn.jackq.messenger"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
