--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,13 +28,13 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
-//    task ndkBuild(type: Exec) {
-//        commandLine  "${android.ndkDirectory}/ndk-build", '-C', file('src/main/jni/').absolutePath
-//    }
-//
-//    tasks.withType(JavaCompile) {
-//        compileTask -> compileTask.dependsOn ndkBuild
-//    }
+    task ndkBuild(type: Exec) {
+        commandLine "${rootDir}/app/tools/jnigen.sh"
+    }
+
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn ndkBuild
+    }
     externalNativeBuild {
         ndkBuild {
             path 'src/main/jni/Android.mk'
@@ -53,11 +53,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    // Backport Java 8 Features to Android
-//    compile 'com.github.streamsupport.streamsupport:streamsupport:-SNAPSHOT'
-//    compile 'com.github.streamsupport.streamsupport:streamsupport-cfuture:-SNAPSHOT'
-//    compile 'com.github.streamsupport.streamsupport:streamsupport-atomic:-SNAPSHOT'
-//    compile 'com.github.streamsupport.streamsupport:streamsupport-flow:-SNAPSHOT'
-//    compile 'com.github.streamsupport.streamsupport:streamsupport-literal:-SNAPSHOT'
     compile 'org.bytedeco:javacpp:1.3.2'
 }
