--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'org.bytedeco:javacpp:1.3.2'
+    compile 'com.android.support:support-v4:25.3.1'
 }
