--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'org.bytedeco:javacpp:1.3.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
