add server module skeleton

--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,7 @@
     "test": "jest",
     "start": "babel-node src/index.js",
     "convert": "babel src -d build --presets=env,es2017",
-    "watch": "babel src -d build -watch --presets=env,es2017",
-    "build-web": "rollup -c"
+    "watch": "babel src -d build -watch --presets=env,es2017"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
