--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,13 @@
     "babel-preset-es2017": "^6.22.0",
     "jest": "^19.0.2"
   },
-
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "node-opus": "^0.2.6"
   }
 }
