--- a/desktop/app/package.json
+++ b/desktop/app/package.json
@@ -8,11 +8,10 @@
     "babel-runtime": "^6.23.0",
     "keen-ui": "^1.0.0",
     "messenger-server": "file:../../server",
-    "vue": "^2.1.10",
+    "vue": "^2.3.0",
     "vue-electron": "^1.0.6",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.2",
-    "vuex": "^2.1.1"
+    "vue-resource": "^1.3.1",
+    "vue-router": "^2.5.2"
   },
   "devDependencies": {},
   "homepage": "https://github.com/Jack-Q/messenger/",
