--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter app",
     "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix app",
     "pack": "npm run pack:main && npm run pack:renderer",
+    "pack:dev": "npm run pack:main:dev && npm run pack:renderer:dev",
     "pack:main": "cross-env NODE_ENV=production webpack -p --progress --colors --config webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack -p --progress --colors --config webpack.renderer.config.js",
+    "pack:main:dev": "webpack -p --progress --colors --config webpack.main.config.js",
+    "pack:renderer:dev": "webpack -p --progress --colors --config webpack.renderer.config.js",
     "postinstall": "npm run lint:fix && cd app && npm install"
   },
   "build": {
@@ -58,43 +61,43 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.18.0",
-    "babel-runtime": "^6.6.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "del": "^2.2.1",
-    "devtron": "^1.1.0",
-    "electron": "^1.3.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
+    "del": "^2.2.2",
+    "devtron": "^1.4.0",
+    "electron": "^1.6.6",
     "electron-debug": "^1.1.0",
-    "electron-devtools-installer": "^2.0.1",
-    "electron-builder": "^11.4.4",
-    "electron-rebuild": "^1.1.3",
-    "babel-eslint": "^7.0.0",
-    "eslint": "^3.13.1",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.16.1",
+    "electron-devtools-installer": "^2.2.0",
+    "electron-builder": "^17.1.1",
+    "electron-rebuild": "^1.5.7",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.1",
     "tree-kill": "^1.1.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^2.0.7",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^10.0.2",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "url-loader": "^0.5.8",
+    "vue-hot-reload-api": "^2.1.0",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^12.0.2",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "homepage": "https://github.com/Jack-Q/messenger/",
   "dependencies": {}
