--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "test": "jest",
     "start": "babel-node src/index.js",
-    "convert": "babel src -d build --presets=env,es2017",
-    "watch": "babel src -d build -watch --presets=env,es2017"
+    "convert": "babel src -d build --presets=env,es2017,stage-2",
+    "watch": "babel src -d build -watch --presets=env,es2017,stage-2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -17,6 +17,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2017": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "jest": "^19.0.2"
   },
   "jest": {
