--- a/desktop/app/package.json
+++ b/desktop/app/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.23.0",
     "keen-ui": "^1.0.0",
     "messenger-server": "file:../../server",
+    "node-opus": "^0.2.6",
     "vue": "^2.3.0",
     "vue-electron": "^1.0.6",
     "vue-resource": "^1.3.1",
