--- a/desktop/app/package.json
+++ b/desktop/app/package.json
@@ -4,17 +4,21 @@
   "version": "0.0.0",
   "description": "Desktop client for Messenger",
   "main": "./dist/main.js",
+  "scripts": {
+    "postinstall": "electron-rebuild"
+  },
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "keen-ui": "^1.0.0",
-    "messenger-server": "file:../../server",
     "node-opus": "^0.2.6",
     "vue": "^2.3.0",
     "vue-electron": "^1.0.6",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.5.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "electron-rebuild": "^1.5.7"
+  },
   "homepage": "https://github.com/Jack-Q/messenger/",
   "author": {
     "name": "Jack Q",
