--- a/desktop/package.json
+++ b/desktop/package.json
@@ -24,7 +24,8 @@
     "copyright": "Copyright 2017 (c) Jack Q",
     "category": "Network.Chat",
     "dmg": {
-      "contents": [{
+      "contents": [
+        {
           "x": 410,
           "y": 150,
           "type": "link",
@@ -50,7 +51,8 @@
     },
     "linux": {
       "target": [
-        "AppImage", "deb"
+        "AppImage",
+        "deb"
       ]
     }
   },
@@ -62,6 +64,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -73,16 +76,15 @@
     "del": "^2.2.2",
     "devtron": "^1.4.0",
     "electron": "^1.6.6",
+    "electron-builder": "^17.1.1",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.2.0",
-    "electron-builder": "^17.1.1",
     "electron-rebuild": "^1.5.7",
-    "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^2.0.1",
-    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
