--- a/desktop/.gitignore
+++ b/desktop/.gitignore
@@ -1,8 +1,5 @@
 .DS_Store
-app/dist/index.html
-app/dist/main.js
-app/dist/renderer.js
-app/dist/styles.css
+app/dist/*
 builds/*
 dist/*
 node_modules/
