clear redundent dependencies

--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,6 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "node-opus": "^0.2.6",
-    "shortid": "^2.2.8",
-    "speaker": "^0.3.0"
+    "shortid": "^2.2.8"
   }
 }
