--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -48,6 +47,7 @@
 
         <activity
             android:name=".ui.LoginActivity"
+            android:launchMode="singleTop"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".ui.ChatActivity"
