--- a/desktop/app/package.json
+++ b/desktop/app/package.json
@@ -14,7 +14,10 @@
     "vue": "^2.3.0",
     "vue-electron": "^1.0.6",
     "vue-resource": "^1.3.1",
-    "vue-router": "^2.5.2"
+    "vue-router": "^2.5.2",
+    "electron": "^1.6.11",
+    "electron-devtools-installer": "^2.2.0",
+    "babel-register": "^6.24.1"
   },
   "devDependencies": {
     "electron-rebuild": "^1.5.7"
