--- a/desktop/package.json
+++ b/desktop/package.json
@@ -63,10 +63,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -75,7 +77,7 @@
     "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "devtron": "^1.4.0",
-    "electron": "^1.6.6",
+    "electron": "^1.6.11",
     "electron-builder": "^17.1.1",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.2.0",
