--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "start": "babel-node src/index.js",
     "convert": "babel src -d build --presets=env,es2017,stage-2",
-    "watch": "babel src -d build -watch --presets=env,es2017,stage-2"
+    "watch": "babel src -d build -watch --presets=env,es2017,stage-2",
+    "run:ci": "npm run convert"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
