--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "android/app/src/main/jni/opus"]
 	path = android/app/src/main/jni/opus
-	url = git@github.com:xiph/opus.git
+	url = https://github.com/xiph/opus.git
