--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ node_js:
   - node
   - 7
 env:
-  - CXX=g++-4.8
-  - TEST_DIR=server
-  - TEST_DIR=desktop
+  - CXX=g++-4.8 TEST_DIR=server
+  - CXX=g++-4.8 TEST_DIR=desktop
 script: cd $TEST_DIR && npm run run:ci
