--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
     "run:ci": "npm run convert"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-jest": "^19.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "jest": "^19.0.2"
+    "jest": "^20.0.4"
   },
   "jest": {
     "transform": {
