fix package cross reference

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -17,7 +17,8 @@
     "pack:main:dev": "webpack -p --progress --colors --config webpack.main.config.js",
     "pack:renderer:dev": "webpack -p --progress --colors --config webpack.renderer.config.js",
     "postinstall": "npm run lint:fix && cd app && npm install",
-    "run:ci": "npm run build"
+    "run:ci": "npm run build",
+    "preinstall": "cd ../server && npm install && cd ../desktop"
   },
   "build": {
     "productName": "Messenger",
